# invoice-agent

./: .env-example  .gitignore  Dockerfile  docker-compose.yml  products_list.csv  products_list.json  pyproject.toml  run.py
config/: GOOGLE_VISION_SETUP.md  vision-credentials-example.json
invoice_agent/: main.py
invoice_agent/api/: __init__.py  ocr.py  product.py  v1.py
invoice_agent/core/: __init__.py  config.py  logging.py
invoice_agent/db/: __init__.py  mongodb.py
invoice_agent/models/: __init__.py  invoice.py  product.py
invoice_agent/services/: __init__.py  invoice_service.py  ocr_service.py  product_service.py
附件/: 客戶訂單資料.xlsx
